--- a/angular.json
+++ b/angular.json
@@ -30,12 +30,7 @@
               "@ngxpert/hot-toast/styles.css",
               "src/styles.css"
             ],
-            "scripts": [],
-            "server": "src/main.server.ts",
-            "outputMode": "server",
-            "ssr": {
-              "entry": "src/server.ts"
-            }
+            "scripts": []
           },
           "configurations": {
             "production": {
