--- a/package.json
+++ b/package.json
@@ -20,10 +20,15 @@
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/platform-server": "^19.0.0",
     "@angular/router": "^19.0.0",
-    "@angular/ssr": "^19.0.7",
     "@ngneat/overview": "6.1.1",
     "@ngxpert/hot-toast": "^4.1.1",
+    "@types/chart.js": "^2.9.41",
+    "apexcharts": "^4.7.0",
+    "chart.js": "^4.4.9",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "express": "^4.18.2",
+    "ng-apexcharts": "^1.15.0",
+    "ng2-charts": "^8.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
